# rag-docs-search

./: .gitignore  README.md  docker-compose.yml  interview-guide.md  phase1-managed.md  phase2-selfbuilt.md  pyproject.toml  technical-design.md
api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
api/app/: main.py
api/app/api/: books.py  deps.py  health.py  query.py
api/app/core/: config.py  logging.py
api/app/models/: __init__.py  book.py  citation.py  query.py
api/app/services/generation/: __init__.py  base.py  gemini.py  mock.py
api/app/services/retrieval/: __init__.py  base.py  discovery_engine.py  mock.py
api/tests/: test_smoke.py
eval/: metrics.py  run_eval.py
eval/golden/: README.md  v1.jsonl
eval/runs/: phase1-discovery-engine-v1-tuned-prompt.md  phase1-discovery-engine-v1.md  phase1-mock-v1.md
infra/: setup.md
infra/scripts/: destroy.sh
learnings/: 01-rag-eval-strategy.md  02-eval-before-deploy.md  03-corpus-pivot-saga.md  04-golden-set-design-playbook.md  05-keyword-set-design.md  06-golden-set-at-scale.md  07-vertex-ai-search-setup.md  08-phase1-baseline-interpretation.md  09-vector-db-landscape.md  10-phase2-design-audit-2026.md  README.md
web/: .dockerignore  .gitignore  Dockerfile  README.md  angular.json  package-lock.json  package.json  proxy.conf.json  tsconfig.json
web/nginx/: default.conf
web/src/: index.html  styles.scss
web/src/app/: app.routes.ts  app.ts
web/src/app/core/models/: book.ts  citation.ts  query.ts
web/src/app/core/services/: book.service.ts  query.service.ts
(+4 files in other folders)
