[project]
name = "rag-docs-api"
version = "0.1.0"
description = "FastAPI backend for the NotebookLM-style history-book RAG system"
authors = [{ name = "anki-yang" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi (>=0.115.0,<0.116.0)",
    "uvicorn[standard] (>=0.32.0,<0.33.0)",
    "pydantic (>=2.9.0,<3.0.0)",
    "pydantic-settings (>=2.6.0,<3.0.0)",
    "httpx (>=0.27.0,<0.28.0)",
    "google-cloud-discoveryengine (>=0.13.0,<0.14.0)",
    "google-cloud-aiplatform (>=1.71.0,<2.0.0)",
    "google-cloud-logging (>=3.11.0,<4.0.0)",
    "google-genai (>=0.3.0,<1.0.0)",
    "structlog (>=24.4.0,<25.0.0)",
    "tenacity (>=9.0.0,<10.0.0)",
]

[tool.poetry]
package-mode = true
packages = [{ include = "app" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
ruff = "^0.7.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
